--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-transition-group": "^4.4.5",
+    "survey-react-ui": "^2.0.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
