--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "moment": "^2.29.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-transition-group": "^4.4.5",
+    "rsuite": "^5.78.1",
     "survey-react-ui": "^2.0.0",
     "tailwind-merge": "^2.5.5"
   },
