--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
+    "react-gauge-component": "^1.2.64",
     "react-router-dom": "^7.0.2",
     "react-transition-group": "^4.4.5",
     "rsuite": "^5.78.1",
