--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^7.28.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
     "react-gauge-component": "^1.2.64",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.0.2",
     "react-transition-group": "^4.4.5",
     "rsuite": "^5.78.1",
