Post Requests server functionality complete

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@googleapis/healthcare": "^23.6.0",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
@@ -17,13 +18,19 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.8.4",
+    "body-parser": "^1.20.3",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "formik": "^2.4.6",
+    "google-auth-library": "^9.15.1",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
