--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@google-cloud/firestore": "^7.11.0",
+    "@google/genai": "^0.7.0",
     "@googleapis/healthcare": "^23.6.0",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.8",
@@ -32,6 +33,7 @@
     "google-auth-library": "^9.15.1",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "openai": "^4.91.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^19.0.0",
