Fixed resubmitting POST data on route change

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.21.2",
     "formik": "^2.4.6",
     "google-auth-library": "^9.15.1",
+    "html-react-parser": "^5.2.3",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "openai": "^4.91.1",
